<resources>
    <string name="app_name">Записная книжка</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Записная книжка</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="client">Люди</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="name">Имя</string>
    <string name="sec_name">Фамииля</string>
    <string name="tel">Телефон</string>
    <string name="important">Семья</string>
    <string name="pin">Прикрепить/Открепить</string>
    <string name="normal">Знакомые</string>
    <string name="not_important">Работа</string>
    <string name="notes">Заметки</string>
    <string name="importance">Группы</string>
    <string name="settings">Настройки</string>
    <string name="special">Особенный</string>
    <string name="people">Люди</string>
    <string name="notebooks">Записные книжки</string>
    <string name="general_settings">Основные настройки</string>
    <string name="web_page">Веб-страница</string>
    <string name="edit">Редактировать</string>
    <string name="title">Название</string>
    <string name="note">Заметка</string>
    <string name="delete">Удалить</string>
    <string name="delete_message">Вы действительно хотите удалть?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="msg_url">Открыть с помощью </string>
    <string name="text_settings">Настройки текста</string>
    <string name="text_color_name">Цвет имени клиента</string>
    <string name="text_color_sec_name">Цвет фамили клиента</string>
    <string name="text_color_name_summary">изменяет цвет имени клиента</string>
    <string name="text_color_sec_name_summary">изменяет цвет фамилии клиента</string>
    <!--KEYS-->
    <string name="text_name_color_key">text_name_color_key</string>
    <string name="text_sec_name_color_key">text_sec_name_color_key</string>


</resources>