<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_edit_layout">

    <EditText
        android:id="@+id/edName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/edit_background"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edSecName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_background"
        android:ems="10"
        android:hint="@string/sec_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/edName"
        app:layout_constraintStart_toStartOf="@+id/edName"
        app:layout_constraintTop_toBottomOf="@+id/edName" />

    <EditText
        android:id="@+id/edTel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_background"
        android:ems="10"
        android:hint="@string/tel"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/edName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edName"
        app:layout_constraintTop_toBottomOf="@+id/edSecName" />

    <EditText
        android:id="@+id/edDisc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_background"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/notes"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxSpecial"
        app:layout_constraintEnd_toEndOf="@+id/edName"
        app:layout_constraintStart_toStartOf="@+id/edName"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxImp2" />

    <CheckBox
        android:id="@+id/checkBoxImp1"
        android:textColor="@color/green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:onClick="onClickCh1"
        android:hint="@string/important"
        android:text="@string/important"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxImp2"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxImp2"
        app:layout_constraintTop_toTopOf="@+id/checkBoxImp2" />

    <CheckBox
        android:id="@+id/checkBoxImp2"
        android:textColor="@color/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickCh2"
        android:layout_marginTop="24dp"
        android:text="@string/normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTel" />

    <CheckBox
        android:id="@+id/checkBoxImp3"
        android:textColor="@color/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickCh3"
        android:layout_marginStart="8dp"
        android:text="@string/not_important"
        app:layout_constraintBottom_toBottomOf="@+id/checkBoxImp2"
        app:layout_constraintStart_toEndOf="@+id/checkBoxImp2"
        app:layout_constraintTop_toTopOf="@+id/checkBoxImp2" />

    <CheckBox
        android:id="@+id/checkBoxSpecial"
        android:textColor="@color/orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/special"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_save"
         />
</androidx.constraintlayout.widget.ConstraintLayout>